--- a/web/html/profile.html
+++ b/web/html/profile.html
@@ -50,7 +50,7 @@
                 <ul>
                     <li class="active"><a href="./profile.html">Home</a></li>
                     <li><a href="./myfacets.html">My Facets</a> </li>
-                    <li><a href="./myfacets.html">Add New Facet</a></li>
+                    <li><a href="./newfacet.html">Add New Facet</a></li>
                     <li><a href="./editfacet.html">Edit a Facet</a></li>
                     <li><a href="./history.html">History</a></li>
                 </ul>
