--- a/web/html/newfacet.html
+++ b/web/html/newfacet.html
@@ -87,11 +87,11 @@
         statusChangeCallback(response);
       });
       FB.Event.subscribe('auth.login', function () {
-          window.location = "http://localhost:63342/RadFa/web/html/profile.html";
+          window.location = "https://robodimos.github.io/web/html/profile.html";
       });
 
       FB.Event.subscribe('auth.logout', function () {
-          window.location = "http://localhost:63342/RadFa/web/html/login.html";
+          window.location = "https://robodimos.github.io/web/html/login.html";
       });
 
   };
